--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "abort-controller",
-  "version": "3.0.0",
+  "name": "botany-abort-controller",
+  "version": "3.1.0",
   "description": "An implementation of WHATWG AbortController interface.",
   "main": "dist/abort-controller",
   "files": [
